adjust logic and fix issue-content-container spacing

--- a/assets/styles/media.scss
+++ b/assets/styles/media.scss
@@ -33,7 +33,7 @@
   }
   .issue-content-container {
     width: 80%;
-    margin: 40px 0 40px 10%;
+    margin: 20px 0 20px 10%;
   }
 }
 
@@ -88,7 +88,7 @@
   }
   .issue-content-container {
     width: 90%;
-    margin: 30px 0 30px 5%;
+    margin: 15px 0 15px 5%;
   }
   footer {
     padding: 30px 0px;
@@ -129,7 +129,7 @@
   }
   .issue-content-container {
     width: 90;
-    margin: 25px 0 25px 5%;
+    margin: 15px 0 15px 5%;
   }
 }
 
