--- a/assets/styles/theme.scss
+++ b/assets/styles/theme.scss
@@ -100,7 +100,7 @@
 
 .issue-content-container {
   width: 75%;
-  margin: 50px 0px 50px 12.5%;
+  margin: 25px 0px 25px 12.5%;
 }
 
 .issue-content-link {
